fix audit